feat: replace the gcounter with the package version

--- a/examples/wasm/asconfig.json
+++ b/examples/wasm/asconfig.json
@@ -18,5 +18,8 @@
   },
   "options": {
     "bindings": "esm"
+  },
+  "paths": {
+    "@topology-foundation/crdt-wasm": ["../../packages/crdt-wasm/assembly"]
   }
 }
