--- a/packages/crdt-wasm/package.json
+++ b/packages/crdt-wasm/package.json
@@ -7,7 +7,9 @@
     "asbuild:debug": "asc assembly/index.ts --target debug",
     "asbuild:release": "asc assembly/index.ts --target release",
     "asbuild": "npm run asbuild:debug && npm run asbuild:release",
-    "start": "npx serve ."
+    "start": "npx serve .",
+    "test:compile": "asc assembly/index.ts --target release --noEmit",
+    "test": "node tests/compile.test.js"
   },
   "keywords": [],
   "author": "",
