--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -47,6 +47,8 @@
     "@libp2p/webtransport": "^4.1.2",
     "@multiformats/multiaddr": "^12.3.0",
     "it-pipe": "^3.0.1",
-    "libp2p": "^1.8.2"
+    "libp2p": "^1.8.2",
+    "typescript-logging": "^2.2.0",
+    "typescript-logging-category-style": "^2.2.0"
   }
 }
