add ugly code to avoid closures issues; fixed options missplacing in asconfig

--- a/packages/crdt/asconfig.json
+++ b/packages/crdt/asconfig.json
@@ -15,10 +15,10 @@
       "shrinkLevel": 0,
       "converge": false,
       "noAssert": false
-    },
-    "options": {
-      "bindings": "esm",
-      "disableWarning": "235"
     }
+  },
+  "options": {
+    "bindings": "esm",
+    "disableWarning": [235]
   }
 }
