feat: tslog for packages/network, pulling the config from node package not working

--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -38,6 +38,11 @@
     "@topology-foundation/crdt": "0.0.23-5",
     "@topology-foundation/network": "0.0.23-5",
     "@topology-foundation/object": "0.0.23-5",
-    "commander": "^12.1.0"
+    "commander": "^12.1.0",
+    "tslog": "^4.9.3"
+  },
+  "loggerOptions": {
+    "minLevel": "info",
+    "type": "pretty"
   }
 }
