--- a/packages/node/tsconfig.json
+++ b/packages/node/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "inlineSourceMap": true
+    "outDir": "dist"
   },
   "references": [
     {
