--- a/packages/object/asconfig.json
+++ b/packages/object/asconfig.json
@@ -8,9 +8,7 @@
       "debug": true
     },
     "release": {
-      "outFile": "dist/asc/release.wasm",
-      "textFile": "dist/asc/release.wat",
-      "sourceMap": true,
+      "sourceMap": false,
       "optimizeLevel": 3,
       "shrinkLevel": 0,
       "converge": false,
@@ -18,7 +16,6 @@
     }
   },
   "options": {
-    "bindings": "esm",
     "lib": {
       "@topology-foundation/crdt": ["../crdt/src/index.asc.ts"]
     }
