--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -25,5 +25,12 @@
     "clean": "rm -rf dist/ node_modules/",
     "prepack": "tsc -b",
     "test": "vitest"
+  },
+  "dependencies": {
+    "@topology-foundation/object": "^0.0.23-5"
+  },
+  "devDependencies": {
+    "js-sha256": "^0.11.0",
+    "vitest": "^2.0.5"
   }
 }
