--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -10,6 +10,7 @@
     "@topology-foundation/network": "0.0.23-5",
     "@topology-foundation/node": "0.0.23-5",
     "@topology-foundation/object": "0.0.23-5",
+    "browserify-fs": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
@@ -20,14 +21,16 @@
     "@types/node": "^20.11.16",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
+    "vite": "^5.4.1",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "vite build",
     "clean": "rm -rf dist/ node_modules/",
-    "dev": "webpack serve",
+    "dev": "vite serve",
     "start": "ts-node ./src/index.ts"
   }
 }
