--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -35,9 +35,12 @@
     "vitest": "^2.0.5"
   },
   "dependencies": {
+    "@chainsafe/libp2p-gossipsub": "^13.1.0",
+    "@libp2p/interface": "^1.7.0",
     "@topology-foundation/crdt": "0.0.23-5",
     "@topology-foundation/network": "0.0.23-5",
     "@topology-foundation/object": "0.0.23-5",
-    "commander": "^12.1.0"
+    "commander": "^12.1.0",
+    "it-length-prefixed": "^9.1.0"
   }
 }
