--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -23,6 +23,7 @@
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "ts-node": "^10.9.2",
+    "uint8arrays": "^5.1.0",
     "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
