--- a/packages/crdt/package.json
+++ b/packages/crdt/package.json
@@ -27,7 +27,5 @@
     "test": "vitest"
   },
   "dependencies": {},
-  "devDependencies": {
-    "vitest": "^2.0.5"
-  }
+  "devDependencies": {}
 }
