--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -26,11 +26,6 @@
     "prepack": "tsc -b",
     "test": "vitest"
   },
-  "dependencies": {
-    "@topology-foundation/object": "^0.0.23-5"
-  },
-  "devDependencies": {
-    "js-sha256": "^0.11.0",
-    "vitest": "^2.0.5"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
