--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -24,6 +24,7 @@
     "ts-loader": "^9.3.1",
     "typescript": "^5.5.4",
     "vite": "^5.4.1",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
