--- a/packages/object/tsconfig.json
+++ b/packages/object/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src/**/*.ts", "tests/hashgraph.test.ts"]
+  "include": ["src/**/*.ts"]
 }
