--- a/packages/crdt/package.json
+++ b/packages/crdt/package.json
@@ -25,5 +25,8 @@
     "clean": "rm -rf dist/ node_modules/",
     "prepack": "tsc -b",
     "test": "vitest"
+  },
+  "dependencies": {
+    "@topology-foundation/object": "0.0.23-5"
   }
 }
