add missing ref for object package

--- a/packages/crdt/tsconfig.json
+++ b/packages/crdt/tsconfig.json
@@ -3,5 +3,10 @@
   "compilerOptions": {
     "outDir": "dist"
   },
+  "references": [
+    {
+      "path": "../object"
+    }
+  ],
   "include": ["src/**/*.ts"]
 }
