--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,15 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
-	"organizeImports": {
-		"enabled": true
+	"files": {
+		"ignore": ["**/dist/*", "**/docs/*"]
 	},
 	"linter": {
 		"enabled": true,
 		"rules": {
 			"recommended": true
 		}
+	},
+	"organizeImports": {
+		"enabled": true
 	}
 }
