--- a/packages/crdt/tsconfig.json
+++ b/packages/crdt/tsconfig.json
@@ -3,6 +3,11 @@
 	"compilerOptions": {
 		"outDir": "dist"
 	},
+	"references": [
+		{
+			"path": "../object"
+		}
+	],
 	"include": ["src/**/*.ts"],
 	"exclude": ["src/**/*.asc.ts"]
 }
