--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,6 @@
 
 		"skipLibCheck": true,
 		"stripInternal": true,
-		"resolveJsonModule": true,
-		"paths": {
-			"@topology-foundation/*": ["./packages/*"]
-		}
+		"resolveJsonModule": true
 	}
 }
