--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
 
 		"skipLibCheck": true,
 		"stripInternal": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"paths": {
+			"@topology-foundation/*": ["packages/*"]
+		}
 	}
 }
