add vite in root

--- a/packages/crdt/package.json
+++ b/packages/crdt/package.json
@@ -8,12 +8,7 @@
 	},
 	"type": "module",
 	"types": "./dist/src/index.d.ts",
-	"files": [
-		"src",
-		"dist",
-		"!dist/test",
-		"!**/*.tsbuildinfo"
-	],
+	"files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
 	"exports": {
 		".": {
 			"types": "./dist/src/index.d.ts",
@@ -36,8 +31,5 @@
 	"devDependencies": {
 		"@topology-foundation/object": "0.0.23-5",
 		"assemblyscript": "^0.27.29"
-	},
-	"dependencies": {
-		"vite-tsconfig-paths": "^5.0.1"
 	}
 }
