--- a/examples/canvas/package.json
+++ b/examples/canvas/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.23-5",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
+    "build": "vite build",
     "clean": "rm -rf dist/ node_modules/",
-    "dev": "webpack serve",
+    "dev": "vite serve",
     "start": "ts-node ./src/index.ts"
   },
   "dependencies": {
@@ -23,6 +23,8 @@
     "@types/node": "^22.4.1",
     "ts-loader": "^9.3.1",
     "typescript": "^5.5.4",
+    "vite": "^5.4.1",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
