--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -5,29 +5,35 @@
   "main": "src/index.ts",
   "repository": "https://github.com/topology-foundation/ts-topology.git",
   "license": "MIT",
+  "scripts": {
+    "asbuild": "asc --config asconfig.json --target release",
+    "build": "vite build",
+    "clean": "rm -rf dist/ node_modules/",
+    "dev": "vite serve",
+    "start": "ts-node ./src/index.ts"
+  },
   "dependencies": {
     "@topology-foundation/crdt": "0.0.23-5",
     "@topology-foundation/network": "0.0.23-5",
     "@topology-foundation/node": "0.0.23-5",
     "@topology-foundation/object": "0.0.23-5",
+    "assemblyscript": "^0.27.29",
     "crypto-browserify": "^3.12.0",
+    "memfs": "^4.11.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "ts-node": "^10.9.2",
+    "uint8arrays": "^5.1.0",
     "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.4.1",
-    "ts-loader": "^9.3.1",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
-    "webpack": "^5.74.0",
+    "vite": "^5.4.1",
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
-  },
-  "scripts": {
-    "build": "webpack",
-    "clean": "rm -rf dist/ node_modules/",
-    "dev": "webpack serve",
-    "start": "ts-node ./src/index.ts"
   }
 }
