--- a/packages/crdt/tsconfig.json
+++ b/packages/crdt/tsconfig.json
@@ -1,12 +1,13 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "dist"
-  },
-  "references": [
-    {
-      "path": "../object"
-    }
-  ],
-  "include": ["src/**/*.ts"]
+	"extends": "../../tsconfig.json",
+	"compilerOptions": {
+		"outDir": "dist"
+	},
+	"references": [
+		{
+			"path": "../object"
+		}
+	],
+	"include": ["src/**/*.ts"],
+	"exclude": ["src/**/*.asc.ts"]
 }
