--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -37,16 +37,24 @@
     "@libp2p/autonat": "^1.1.4",
     "@libp2p/bootstrap": "^10.1.4",
     "@libp2p/circuit-relay-v2": "^1.1.4",
+    "@libp2p/crypto": "^4.1.9",
     "@libp2p/dcutr": "^1.1.4",
+    "@libp2p/devtools-metrics": "^0.2.5",
     "@libp2p/identify": "^2.1.4",
     "@libp2p/interface-pubsub": "^4.0.1",
     "@libp2p/mdns": "^10.1.3",
+    "@libp2p/peer-id-factory": "^4.2.4",
     "@libp2p/pubsub-peer-discovery": "^10.0.2",
     "@libp2p/webrtc": "^4.1.7",
     "@libp2p/websockets": "^8.1.2",
     "@libp2p/webtransport": "^4.1.2",
     "@multiformats/multiaddr": "^12.3.0",
+    "it-length-prefixed": "^9.1.0",
+    "it-map": "^3.1.1",
     "it-pipe": "^3.0.1",
-    "libp2p": "^1.8.3"
+    "libp2p": "^1.8.3",
+    "protobufjs": "^7.3.2",
+    "ts-proto": "^2.0.2",
+    "uint8arrays": "^5.1.0"
   }
 }
