--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -21,9 +21,17 @@
     }
   },
   "scripts": {
+    "asbuild": "asc --config asconfig.json --target release",
     "build": "tsc -b",
     "clean": "rm -rf dist/ node_modules/",
     "prepack": "tsc -b",
     "test": "vitest"
+  },
+  "devDependencies": {
+    "assemblyscript": "^0.27.29"
+  },
+  "dependencies": {
+    "protobufjs": "^7.3.2",
+    "ts-proto": "^2.0.2"
   }
 }
