--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,22 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "allowJs": true,
-    "target": "ES2022",
-    "module": "ES2022",
+	"compilerOptions": {
+		"strict": true,
+		"allowJs": true,
+		"target": "ES2022",
+		"module": "NodeNext",
 
-    "esModuleInterop": true,
-    "moduleResolution": "node",
+		"esModuleInterop": true,
+		"moduleResolution": "NodeNext",
 
-    "declaration": true,
-    "declarationMap": true,
-    "composite": true,
+		"declaration": true,
+		"declarationMap": true,
+		"composite": true,
 
-    "skipLibCheck": true,
-    "stripInternal": true,
-    "resolveJsonModule": true
-  }
+		"skipLibCheck": true,
+		"stripInternal": true,
+		"resolveJsonModule": true,
+		"paths": {
+			"@topology-foundation/*": ["./packages/*"]
+		}
+	}
 }
