--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 		"url": "https://github.com/topology-foundation/ts-topology/issues"
 	},
 	"scripts": {
+		"biome-check": "biome check",
 		"docs": "typedoc",
 		"proto-gen": "buf generate",
 		"release": "release-it",
 		"test": "vitest"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^1.8.3",
 		"@release-it-plugins/workspaces": "^4.2.0",
 		"@types/node": "^22.4.1",
 		"assemblyscript": "^0.27.29",
