--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
 	"files": {
-		"ignore": ["**/dist/*", "**/docs/*"]
+		"ignore": ["**/dist/*", "**/docs/*", "**/*_pb.ts", "**/bundle/*"]
 	},
 	"linter": {
 		"enabled": true,
