--- a/examples/chat/package.json
+++ b/examples/chat/package.json
@@ -31,9 +31,6 @@
 		"ts-loader": "^9.5.1",
 		"typescript": "^5.5.4",
 		"vite": "^5.4.1",
-		"vite-plugin-node-polyfills": "^0.22.0",
-		"webpack": "^5.93.0",
-		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^5.0.4"
+		"vite-plugin-node-polyfills": "^0.22.0"
 	}
 }
