--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/node": "^22.5.0",
 		"assemblyscript": "^0.27.29",
 		"release-it": "^17.6.0",
+		"ts-proto": "^2.0.3",
 		"typedoc": "^0.26.6",
 		"typescript": "^5.5.4",
 		"vite": "^5.4.1",
