--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -26,7 +26,7 @@
 		"assemblyscript": "^0.27.29"
 	},
 	"dependencies": {
-		"protobufjs": "^7.4.0",
+		"@bufbuild/protobuf": "^2.0.0",
 		"ts-proto": "^2.0.3"
 	}
 }
