add main file in object package json

--- a/packages/object/package.json
+++ b/packages/object/package.json
@@ -9,6 +9,7 @@
 	"type": "module",
 	"types": "./dist/src/index.d.ts",
 	"files": ["src", "dist", "!dist/test", "!**/*.tsbuildinfo"],
+	"main": "./dist/src/index.js",
 	"exports": {
 		".": {
 			"types": "./dist/src/index.d.ts",
