refactor: HG and AddWinsSet (put HG out of the CROs) (#131)
Co-authored-by: Sacha Froment <sfroment42@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,5 @@ jobs:
       - shell: bash
         run: |
           pnpm install
-          pnpm test
+          cd packages/object && pnpm build
+          cd ../.. && pnpm test
