--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Run benchmark
         run: |
           pnpm install
+          cd packages/node
+          pnpm build
+          cd ../..
           pnpm run bench --outputJson benchmark.json
       - name: Download previous benchmark data
         uses: actions/cache@v4
